--- a/public/styles.css
+++ b/public/styles.css
@@ -1,11 +1,46 @@
 body {
-    background-color: red;
+    background-color:#FCFA88;
 }
 
-.container{g
+h4 {
+    text-decoration: underline;
+}
+.assignment {
+    position: absolute;
+    top: 60px;
+    font-family: Helvetica;
+}
+.container{
     height: 700px;
 }
-.content {
-    width: 960px;
-    margin: auto;
-}
+.flex-outer {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    margin: auto; 
+    position: absolute;
+    top: 100px;
+    width: 450px;
+    padding: 10px 30px;
+    border: 1px solid #CCC;
+    border-radius: 15px;
+    background: #eee;
+    justify-content: space-between;
+  }
+
+/*.flex-outer li button 
+    margin-right: auto;
+    padding: 8px 16px;
+    border: none;
+    background: white;
+    color: black;
+    text-transform: uppercase;
+    letter-spacing: .09em;
+    border-radius: 2px;
+  
+
+  .flex-outer li
+    width: 50%;
+    margin-right: auto;
+  
+ 
