Made the search list show up on the page

--- a/public/styles.css
+++ b/public/styles.css
@@ -9,3 +9,13 @@ body {
     width: 960px;
     margin: auto;
 }
+
+
+.column-background {
+    background-color: blue;
+    height: 100px;
+}
+
+.targetBox {
+
+}
