css target boxes of results

--- a/public/styles.css
+++ b/public/styles.css
@@ -38,6 +38,9 @@ body {
     height: 100px;
 }
 
-.targetBox {
-
+li {
+    background-color: red;
+    height: 100px;
+    width: 300px;
+    margin: 40px;
 }
