--- a/public/styles.css
+++ b/public/styles.css
@@ -26,9 +26,7 @@ h4 {
     border-radius: 15px;
     background: #eee;
     justify-content: space-between;
-  }
-
- 
+}
 .content {
     width: 960px;
     margin: auto;
@@ -40,9 +38,18 @@ h4 {
     height: 100px;
 }
 
+.target-list {
+    margin-top: 200px;
+}
+
 li {
     background-color: red;
     height: 120px;
     width: 300px;
     margin: 40px;
 }
+
+    
+
+ 
+
