--- a/public/styles.css
+++ b/public/styles.css
@@ -11,7 +11,7 @@ h4 {
     font-family: Helvetica;
 }
 .container{
-    height: 1000px;
+    min-height: 100%;
 }
 .flex-outer {
     display: flex;
