--- a/public/styles.css
+++ b/public/styles.css
@@ -2,18 +2,14 @@ body {
     background-color:#8987B2;
 }
 .assign1 {
-    margin-top: 15px;
+    margin-top: 30px;
     text-decoration: underline;
     font-size: 30px;
+    margin-left: 15px;
 }
 
 .container{
     min-height: 100%;
-}
-.assignment {
-    position: absolute;
-    top: 60px;
-    font-family: Helvetica;
 }
 
 .flex-outer {
@@ -22,7 +18,7 @@ body {
     align-items: center;
     margin: auto; 
     position: absolute;
-    top: 100px;
+    top: 130px;
     width: 450px;
     padding: 10px 30px;
     border: 1px solid #CCC;
@@ -42,15 +38,17 @@ body {
 }
 
 .target-list {
-    margin-top: 100px;
+    margin-top: 115px;
+    position: relative;
 }
 
 li {
     background-color: red;
     height: 140px;
-    width: 300px;
+    width: 350px;
     margin: 40px;
     padding:10px 10px;
+    font-family: helvetica;
     background-image: linear-gradient(to bottom, #C3EBDD ,white );
 }
 
