--- a/public/styles.css
+++ b/public/styles.css
@@ -17,7 +17,6 @@ html {
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    margin: auto; 
     position: absolute;
     top: 130px;
     width: 450px;
@@ -37,18 +36,25 @@ html {
     height: 100px;
 }
 
-.target-list {
-    margin-top: 115px;
-}
 
+.target-list {
+    margin-top: 120px;
+    margin-left: 20px;
+}
 
 li {
     height: 140px;
-    width: 350px;
+    width: 360px;
     margin: 40px;
     padding:10px 10px;
+    justify-content: space-between;
     background-image: linear-gradient(to bottom, #C3EBDD ,white );
+    margin: -4px; 
 }
-li.name {
+
+.name {
     font-weight: bold;
+}
+span {
+    display: block;
 }
