--- a/public/styles.css
+++ b/public/styles.css
@@ -3,6 +3,7 @@ html {
 }
 .container {
     max-width: 960px;
+    margin-bottom: 30px;
 }
 h1 {
     color: white;
@@ -56,7 +57,7 @@ h1 {
 }
 
 li {
-    height: 160px;
+    height: 185px;
     width: 430px;
     margin: 40px;
     padding:10px 12px;
